<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/home"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/baseline_web_asset_24"
            android:title="@string/menu_urunler" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_watch_later_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_settings" />

    </group>
</menu>